--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "react-web-demo",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": false,
-  "repository":"https://github.com/minhank12345/react-web-demo.git",
+  "repository": "https://github.com/minhank12345/react-web-demo.git",
   "dependencies": {
+    "moment-datetime-js": "^1.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
