--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "react-web-demo",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "private": false,
+  "description": "Demo website using react",
+  "keywords": "demo, react",
   "repository": "https://github.com/minhank12345/react-web-demo.git",
+  "license": "MIT",
   "dependencies": {
-    "moment-datetime-js": "^1.0.2",
+    "moment-datetime-js": "^1.0.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
